# claude-grimoire

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
agents/: README.md
commands/: README.md  dream.md
docs/dreaming/: README.md  architecture.md
docs/grimoire/: architecture.md
grimoire/: README.md  pyproject.toml
grimoire/plugin/: .mcp.json
grimoire/plugin/.claude-plugin/: plugin.json
grimoire/plugin/commands/: promote.md
grimoire/plugin/hooks/: grimoire_hook.py  hooks.json
grimoire/plugin/skills/reflexion-memory/: SKILL.md
grimoire/src/grimoire/: __init__.py  mcp_server.py
hooks/: README.md
hooks/dreaming/: README.md  config.example.json  dispatch.py  reconcile.py  worker.py
hooks/dreaming/engines/: __init__.py  base.py  deterministic.py  headless.py  hybrid.py
hooks/dreaming/install/: cron.linux.txt  install.py  launchd.macos.plist  schtask.windows.ps1
hooks/dreaming/lib/: config.py  digest.py  highwater.py  memory.py  projectdir.py  redact.py  spool.py  transcript.py
hooks/dreaming/prompts/: dream.system.md  wake.system.md
mnemosyne/: .gitignore  README.md  mnemosyne.config.json  pyproject.toml
mnemosyne/docs/: design.md  lesson-review-checklist.md
mnemosyne/memory/: .gitignore  LESSONS.md  lessons.jsonl
mnemosyne/plugin/.claude-plugin/: plugin.json
mnemosyne/plugin/commands/: promote.md  recall.md  reflect.md
mnemosyne/plugin/hooks/: hooks.json  mnemosyne_hook.py
mnemosyne/plugin/skills/reflexion-memory/: SKILL.md
mnemosyne/src/mnemosyne/: __init__.py  __main__.py  cli.py  color.py  config.py  core.py  mcp_server.py  stores.py  wizard.py
mnemosyne/src/mnemosyne/data/: default.config.json  multi-store.config.json
mnemosyne/src/mnemosyne/data/schema/: lesson.schema.json
morpheus/: README.md  pyproject.toml
morpheus/docs/: architecture.md  usage.md
morpheus/plugin/: .mcp.json
morpheus/plugin/.claude-plugin/: plugin.json
morpheus/plugin/hooks/: hooks.json  morpheus_hook.py
morpheus/plugin/skills/morpheus/: SKILL.md
morpheus/src/morpheus/: __init__.py  __main__.py  cli.py  dispatch.py  install.py  mcp_server.py  reconcile.py  worker.py
morpheus/src/morpheus/data/: settings.snippet.json
morpheus/src/morpheus/data/schedulers/: cron.linux.txt  launchd.macos.plist  schtask.windows.ps1
morpheus/src/morpheus/engines/: base.py  deterministic.py  headless.py  hybrid.py
morpheus/src/morpheus/lib/: __init__.py  config.py  digest.py  highwater.py  lock.py  projectdir.py  spool.py
morpheus/src/morpheus/prompts/: dream.system.md
skills/: README.md
skills/dreaming/: SKILL.md
tests/: _util.py  test_dispatch_worker.py  test_engines.py  test_memory.py  test_mnemosyne.py  test_morpheus_dispatch.py  test_morpheus_engines.py  test_morpheus_memory.py  test_morpheus_selftest.py  test_morpheus_spool.py  test_morpheus_transcript.py  test_spool_highwater.py  test_transcript.py
tests/fixtures/: transcript_t1.jsonl
