[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire-mcp"
version = "0.4.0"
description = "Grimoire — one MCP server + one Claude Code plugin uniting the mnemosyne (reflexion memory) and morpheus (session dreaming) engines."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Ceryce Armstrong", email = "ceryce.c.armstrong@gmail.com" }]
keywords = ["mcp", "agent-memory", "reflexion", "dreaming", "claude", "memory-consolidation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
# The umbrella server needs both engines and the MCP SDK.
dependencies = ["mnemosyne-reflexion", "morpheus-dreaming", "mcp>=1.2"]

[project.scripts]
grimoire-mcp = "grimoire.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ceryce/claude-grimoire"
Source = "https://github.com/ceryce/claude-grimoire/tree/main/grimoire"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
