[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus-dreaming"
version = "0.4.0"
description = "Automatic session memory consolidation ('dreaming') for Claude Code — reflect over a session transcript and consolidate durable facts into a two-tier memory store."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Ceryce Armstrong", email = "ceryce.c.armstrong@gmail.com" }]
keywords = ["memory-consolidation", "reflexion", "agent-memory", "llm", "claude", "mcp", "dreaming"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
# The engine is stdlib-only. No runtime dependencies.
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
morpheus = "morpheus.cli:main"

[project.urls]
Homepage = "https://github.com/ceryce/claude-grimoire"
Source = "https://github.com/ceryce/claude-grimoire/tree/main/morpheus"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morpheus = ["prompts/*.md", "data/*.json", "data/schedulers/*"]
